CompilerAmpliation/bin/parser/y.output
   0  $accept : final $end

   1  final : program

   2  program : program_body main

   3  program_body : program_body variable
   4               | program_body function
   5               |

   6  function : typed_function
   7           | void_function

   8  function_invocation : ID '(' listOfExpressions ')'
   9                      | ID '(' ')'

  10  typed_function : built_in_type ID '(' listOfParameters ')' '{' function_body '}'
  11                 | built_in_type ID '(' ')' '{' function_body '}'

  12  void_function : VOID ID '(' listOfParameters ')' '{' function_body '}'
  13                | VOID ID '(' ')' '{' function_body '}'

  14  main : VOID MAIN '(' ')' '{' function_body '}'

  15  function_body : listOfVariables listOfStatements

  16  listOfStatements : listOfStatements statement
  17                   |

  18  listOfParameters : listOfParameters ',' parameter
  19                   | parameter

  20  parameter : built_in_type ID

  21  statement : expression ';'
  22            | read ';'
  23            | increment ';'
  24            | write ';'
  25            | if_else
  26            | while
  27            | for
  28            | do_while
  29            | return ';'

  30  expression : expression '+' expression
  31             | expression '*' expression
  32             | expression '/' expression
  33             | expression '-' expression
  34             | expression '%' expression
  35             | assignment
  36             | expression POTENTIAL expression
  37             | expression DOUBLEEQUALS expression
  38             | expression '>' expression
  39             | expression GEQ expression
  40             | expression '<' expression
  41             | expression LEQ expression
  42             | expression DIFFERENT expression
  43             | expression AND expression
  44             | expression OR expression
  45             | '-' expression
  46             | '!' expression
  47             | function_invocation
  48             | '(' expression ')'
  49             | expression '.' expression
  50             | cast
  51             | array
  52             | INT_CONSTANT
  53             | REAL_CONSTANT
  54             | CHAR_CONSTANT
  55             | ID

  56  increment :
  57            | expression INC
  58            | expression DEC
  59            | expression PLUSEQUALS expression
  60            | expression MINUSEQUALS expression
  61            | expression TIMESEQUALS expression
  62            | expression DIVIDEEQUALS expression

  63  if_else : IF '(' expression ')' body ELSE body
  64          | IF '(' expression ')' body

  65  body : '{' listOfStatements '}'
  66       | statement

  67  while : WHILE '(' expression ')' body

  68  do_while : DO body WHILE '(' expression ')'

  69  for : FOR '(' statement expression ';' increment ')' body

  70  cast : '(' built_in_type ')' expression

  71  listOfExpressions : listOfExpressions ',' expression
  72                    | expression

  73  listOfIds : listOfIds ',' ID
  74            | ID

  75  built_in_type : CHAR
  76                | INT
  77                | DOUBLE

  78  array : expression '[' expression ']'

  79  array_creation : array_creation '[' INT_CONSTANT ']'
  80                 | built_in_type '[' INT_CONSTANT ']'
  81                 | struct '[' INT_CONSTANT ']'

  82  variable : built_in_type listOfIds ';'
  83           | array_creation listOfIds ';'
  84           | struct listOfIds ';'

  85  listOfVariables : listOfVariables variable
  86                  |

  87  assignment : expression '=' expression

  88  read : READ listOfExpressions

  89  write : WRITE listOfExpressions

  90  struct : STRUCT '{' listOfVariables '}'

  91  return : RETURN expression

state 0
	$accept : . final $end  (0)
	program_body : .  (5)

	.  reduce 5

	final  goto 1
	program  goto 2
	program_body  goto 3


state 1
	$accept : final . $end  (0)

	$end  accept


state 2
	final : program .  (1)

	.  reduce 1


state 3
	program : program_body . main  (2)
	program_body : program_body . variable  (3)
	program_body : program_body . function  (4)

	VOID  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	.  error

	main  goto 9
	variable  goto 10
	function  goto 11
	typed_function  goto 12
	void_function  goto 13
	built_in_type  goto 14
	array_creation  goto 15
	struct  goto 16


state 4
	void_function : VOID . ID '(' listOfParameters ')' '{' function_body '}'  (12)
	void_function : VOID . ID '(' ')' '{' function_body '}'  (13)
	main : VOID . MAIN '(' ')' '{' function_body '}'  (14)

	ID  shift 17
	MAIN  shift 18
	.  error


state 5
	built_in_type : CHAR .  (75)

	.  reduce 75


state 6
	built_in_type : DOUBLE .  (77)

	.  reduce 77


state 7
	built_in_type : INT .  (76)

	.  reduce 76


state 8
	struct : STRUCT . '{' listOfVariables '}'  (90)

	'{'  shift 19
	.  error


state 9
	program : program_body main .  (2)

	.  reduce 2


state 10
	program_body : program_body variable .  (3)

	.  reduce 3


state 11
	program_body : program_body function .  (4)

	.  reduce 4


state 12
	function : typed_function .  (6)

	.  reduce 6


state 13
	function : void_function .  (7)

	.  reduce 7


state 14
	typed_function : built_in_type . ID '(' listOfParameters ')' '{' function_body '}'  (10)
	typed_function : built_in_type . ID '(' ')' '{' function_body '}'  (11)
	array_creation : built_in_type . '[' INT_CONSTANT ']'  (80)
	variable : built_in_type . listOfIds ';'  (82)

	ID  shift 20
	'['  shift 21
	.  error

	listOfIds  goto 22


state 15
	array_creation : array_creation . '[' INT_CONSTANT ']'  (79)
	variable : array_creation . listOfIds ';'  (83)

	ID  shift 23
	'['  shift 24
	.  error

	listOfIds  goto 25


state 16
	array_creation : struct . '[' INT_CONSTANT ']'  (81)
	variable : struct . listOfIds ';'  (84)

	ID  shift 23
	'['  shift 26
	.  error

	listOfIds  goto 27


state 17
	void_function : VOID ID . '(' listOfParameters ')' '{' function_body '}'  (12)
	void_function : VOID ID . '(' ')' '{' function_body '}'  (13)

	'('  shift 28
	.  error


state 18
	main : VOID MAIN . '(' ')' '{' function_body '}'  (14)

	'('  shift 29
	.  error


state 19
	struct : STRUCT '{' . listOfVariables '}'  (90)
	listOfVariables : .  (86)

	.  reduce 86

	listOfVariables  goto 30


state 20
	typed_function : built_in_type ID . '(' listOfParameters ')' '{' function_body '}'  (10)
	typed_function : built_in_type ID . '(' ')' '{' function_body '}'  (11)
	listOfIds : ID .  (74)

	'('  shift 31
	','  reduce 74
	';'  reduce 74


state 21
	array_creation : built_in_type '[' . INT_CONSTANT ']'  (80)

	INT_CONSTANT  shift 32
	.  error


state 22
	listOfIds : listOfIds . ',' ID  (73)
	variable : built_in_type listOfIds . ';'  (82)

	','  shift 33
	';'  shift 34
	.  error


state 23
	listOfIds : ID .  (74)

	.  reduce 74


state 24
	array_creation : array_creation '[' . INT_CONSTANT ']'  (79)

	INT_CONSTANT  shift 35
	.  error


state 25
	listOfIds : listOfIds . ',' ID  (73)
	variable : array_creation listOfIds . ';'  (83)

	','  shift 33
	';'  shift 36
	.  error


state 26
	array_creation : struct '[' . INT_CONSTANT ']'  (81)

	INT_CONSTANT  shift 37
	.  error


state 27
	listOfIds : listOfIds . ',' ID  (73)
	variable : struct listOfIds . ';'  (84)

	','  shift 33
	';'  shift 38
	.  error


state 28
	void_function : VOID ID '(' . listOfParameters ')' '{' function_body '}'  (12)
	void_function : VOID ID '(' . ')' '{' function_body '}'  (13)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	')'  shift 39
	.  error

	built_in_type  goto 40
	listOfParameters  goto 41
	parameter  goto 42


state 29
	main : VOID MAIN '(' . ')' '{' function_body '}'  (14)

	')'  shift 43
	.  error


state 30
	listOfVariables : listOfVariables . variable  (85)
	struct : STRUCT '{' listOfVariables . '}'  (90)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	'}'  shift 44
	.  error

	variable  goto 45
	built_in_type  goto 46
	array_creation  goto 15
	struct  goto 16


state 31
	typed_function : built_in_type ID '(' . listOfParameters ')' '{' function_body '}'  (10)
	typed_function : built_in_type ID '(' . ')' '{' function_body '}'  (11)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	')'  shift 47
	.  error

	built_in_type  goto 40
	listOfParameters  goto 48
	parameter  goto 42


state 32
	array_creation : built_in_type '[' INT_CONSTANT . ']'  (80)

	']'  shift 49
	.  error


state 33
	listOfIds : listOfIds ',' . ID  (73)

	ID  shift 50
	.  error


state 34
	variable : built_in_type listOfIds ';' .  (82)

	.  reduce 82


state 35
	array_creation : array_creation '[' INT_CONSTANT . ']'  (79)

	']'  shift 51
	.  error


state 36
	variable : array_creation listOfIds ';' .  (83)

	.  reduce 83


state 37
	array_creation : struct '[' INT_CONSTANT . ']'  (81)

	']'  shift 52
	.  error


state 38
	variable : struct listOfIds ';' .  (84)

	.  reduce 84


state 39
	void_function : VOID ID '(' ')' . '{' function_body '}'  (13)

	'{'  shift 53
	.  error


state 40
	parameter : built_in_type . ID  (20)

	ID  shift 54
	.  error


state 41
	void_function : VOID ID '(' listOfParameters . ')' '{' function_body '}'  (12)
	listOfParameters : listOfParameters . ',' parameter  (18)

	')'  shift 55
	','  shift 56
	.  error


state 42
	listOfParameters : parameter .  (19)

	.  reduce 19


state 43
	main : VOID MAIN '(' ')' . '{' function_body '}'  (14)

	'{'  shift 57
	.  error


state 44
	struct : STRUCT '{' listOfVariables '}' .  (90)

	.  reduce 90


state 45
	listOfVariables : listOfVariables variable .  (85)

	.  reduce 85


state 46
	array_creation : built_in_type . '[' INT_CONSTANT ']'  (80)
	variable : built_in_type . listOfIds ';'  (82)

	ID  shift 23
	'['  shift 21
	.  error

	listOfIds  goto 22


state 47
	typed_function : built_in_type ID '(' ')' . '{' function_body '}'  (11)

	'{'  shift 58
	.  error


state 48
	typed_function : built_in_type ID '(' listOfParameters . ')' '{' function_body '}'  (10)
	listOfParameters : listOfParameters . ',' parameter  (18)

	')'  shift 59
	','  shift 56
	.  error


state 49
	array_creation : built_in_type '[' INT_CONSTANT ']' .  (80)

	.  reduce 80


state 50
	listOfIds : listOfIds ',' ID .  (73)

	.  reduce 73


state 51
	array_creation : array_creation '[' INT_CONSTANT ']' .  (79)

	.  reduce 79


state 52
	array_creation : struct '[' INT_CONSTANT ']' .  (81)

	.  reduce 81


state 53
	void_function : VOID ID '(' ')' '{' . function_body '}'  (13)
	listOfVariables : .  (86)

	.  reduce 86

	function_body  goto 60
	listOfVariables  goto 61


state 54
	parameter : built_in_type ID .  (20)

	.  reduce 20


state 55
	void_function : VOID ID '(' listOfParameters ')' . '{' function_body '}'  (12)

	'{'  shift 62
	.  error


state 56
	listOfParameters : listOfParameters ',' . parameter  (18)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	.  error

	built_in_type  goto 40
	parameter  goto 63


state 57
	main : VOID MAIN '(' ')' '{' . function_body '}'  (14)
	listOfVariables : .  (86)

	.  reduce 86

	function_body  goto 64
	listOfVariables  goto 61


state 58
	typed_function : built_in_type ID '(' ')' '{' . function_body '}'  (11)
	listOfVariables : .  (86)

	.  reduce 86

	function_body  goto 65
	listOfVariables  goto 61


state 59
	typed_function : built_in_type ID '(' listOfParameters ')' . '{' function_body '}'  (10)

	'{'  shift 66
	.  error


state 60
	void_function : VOID ID '(' ')' '{' function_body . '}'  (13)

	'}'  shift 67
	.  error


state 61
	function_body : listOfVariables . listOfStatements  (15)
	listOfVariables : listOfVariables . variable  (85)
	listOfStatements : .  (17)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	INT_CONSTANT  reduce 17
	CHAR_CONSTANT  reduce 17
	REAL_CONSTANT  reduce 17
	ID  reduce 17
	WRITE  reduce 17
	READ  reduce 17
	IF  reduce 17
	WHILE  reduce 17
	RETURN  reduce 17
	FOR  reduce 17
	DO  reduce 17
	'!'  reduce 17
	'-'  reduce 17
	'('  reduce 17
	'}'  reduce 17
	';'  reduce 17

	variable  goto 45
	built_in_type  goto 46
	listOfStatements  goto 68
	array_creation  goto 15
	struct  goto 16


state 62
	void_function : VOID ID '(' listOfParameters ')' '{' . function_body '}'  (12)
	listOfVariables : .  (86)

	.  reduce 86

	function_body  goto 69
	listOfVariables  goto 61


state 63
	listOfParameters : listOfParameters ',' parameter .  (18)

	.  reduce 18


state 64
	main : VOID MAIN '(' ')' '{' function_body . '}'  (14)

	'}'  shift 70
	.  error


state 65
	typed_function : built_in_type ID '(' ')' '{' function_body . '}'  (11)

	'}'  shift 71
	.  error


state 66
	typed_function : built_in_type ID '(' listOfParameters ')' '{' . function_body '}'  (10)
	listOfVariables : .  (86)

	.  reduce 86

	function_body  goto 72
	listOfVariables  goto 61


state 67
	void_function : VOID ID '(' ')' '{' function_body '}' .  (13)

	.  reduce 13


state 68
	function_body : listOfVariables listOfStatements .  (15)
	listOfStatements : listOfStatements . statement  (16)
	increment : .  (56)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	WRITE  shift 77
	READ  shift 78
	IF  shift 79
	WHILE  shift 80
	RETURN  shift 81
	FOR  shift 82
	DO  shift 83
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	'}'  reduce 15
	';'  reduce 56

	function_invocation  goto 87
	statement  goto 88
	expression  goto 89
	read  goto 90
	increment  goto 91
	write  goto 92
	if_else  goto 93
	while  goto 94
	for  goto 95
	do_while  goto 96
	return  goto 97
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 69
	void_function : VOID ID '(' listOfParameters ')' '{' function_body . '}'  (12)

	'}'  shift 101
	.  error


state 70
	main : VOID MAIN '(' ')' '{' function_body '}' .  (14)

	.  reduce 14


state 71
	typed_function : built_in_type ID '(' ')' '{' function_body '}' .  (11)

	.  reduce 11


state 72
	typed_function : built_in_type ID '(' listOfParameters ')' '{' function_body . '}'  (10)

	'}'  shift 102
	.  error


state 73
	expression : INT_CONSTANT .  (52)

	.  reduce 52


state 74
	expression : CHAR_CONSTANT .  (54)

	.  reduce 54


state 75
	expression : REAL_CONSTANT .  (53)

	.  reduce 53


state 76
	function_invocation : ID . '(' listOfExpressions ')'  (8)
	function_invocation : ID . '(' ')'  (9)
	expression : ID .  (55)

	'('  shift 103
	LEQ  reduce 55
	GEQ  reduce 55
	DOUBLEEQUALS  reduce 55
	DIFFERENT  reduce 55
	AND  reduce 55
	OR  reduce 55
	INC  reduce 55
	DEC  reduce 55
	DIVIDEEQUALS  reduce 55
	TIMESEQUALS  reduce 55
	MINUSEQUALS  reduce 55
	PLUSEQUALS  reduce 55
	'='  reduce 55
	'>'  reduce 55
	'<'  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	'%'  reduce 55
	POTENTIAL  reduce 55
	'['  reduce 55
	']'  reduce 55
	'.'  reduce 55
	')'  reduce 55
	','  reduce 55
	';'  reduce 55


state 77
	write : WRITE . listOfExpressions  (89)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	listOfExpressions  goto 104
	expression  goto 105
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 78
	read : READ . listOfExpressions  (88)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	listOfExpressions  goto 106
	expression  goto 105
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 79
	if_else : IF . '(' expression ')' body ELSE body  (63)
	if_else : IF . '(' expression ')' body  (64)

	'('  shift 107
	.  error


state 80
	while : WHILE . '(' expression ')' body  (67)

	'('  shift 108
	.  error


state 81
	return : RETURN . expression  (91)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 109
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 82
	for : FOR . '(' statement expression ';' increment ')' body  (69)

	'('  shift 110
	.  error


state 83
	do_while : DO . body WHILE '(' expression ')'  (68)
	increment : .  (56)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	WRITE  shift 77
	READ  shift 78
	IF  shift 79
	WHILE  shift 80
	RETURN  shift 81
	FOR  shift 82
	DO  shift 83
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	'{'  shift 111
	';'  reduce 56

	function_invocation  goto 87
	statement  goto 112
	expression  goto 89
	read  goto 90
	increment  goto 91
	write  goto 92
	if_else  goto 93
	while  goto 94
	for  goto 95
	do_while  goto 96
	return  goto 97
	assignment  goto 98
	cast  goto 99
	array  goto 100
	body  goto 113


state 84
	expression : '!' . expression  (46)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 114
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 85
	expression : '-' . expression  (45)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 115
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 86
	expression : '(' . expression ')'  (48)
	cast : '(' . built_in_type ')' expression  (70)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	built_in_type  goto 116
	expression  goto 117
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 87
	expression : function_invocation .  (47)

	.  reduce 47


state 88
	listOfStatements : listOfStatements statement .  (16)

	.  reduce 16


state 89
	statement : expression . ';'  (21)
	expression : expression . '+' expression  (30)
	expression : expression . '*' expression  (31)
	expression : expression . '/' expression  (32)
	expression : expression . '-' expression  (33)
	expression : expression . '%' expression  (34)
	expression : expression . POTENTIAL expression  (36)
	expression : expression . DOUBLEEQUALS expression  (37)
	expression : expression . '>' expression  (38)
	expression : expression . GEQ expression  (39)
	expression : expression . '<' expression  (40)
	expression : expression . LEQ expression  (41)
	expression : expression . DIFFERENT expression  (42)
	expression : expression . AND expression  (43)
	expression : expression . OR expression  (44)
	expression : expression . '.' expression  (49)
	increment : expression . INC  (57)
	increment : expression . DEC  (58)
	increment : expression . PLUSEQUALS expression  (59)
	increment : expression . MINUSEQUALS expression  (60)
	increment : expression . TIMESEQUALS expression  (61)
	increment : expression . DIVIDEEQUALS expression  (62)
	array : expression . '[' expression ']'  (78)
	assignment : expression . '=' expression  (87)

	LEQ  shift 118
	GEQ  shift 119
	DOUBLEEQUALS  shift 120
	DIFFERENT  shift 121
	AND  shift 122
	OR  shift 123
	INC  shift 124
	DEC  shift 125
	DIVIDEEQUALS  shift 126
	TIMESEQUALS  shift 127
	MINUSEQUALS  shift 128
	PLUSEQUALS  shift 129
	'='  shift 130
	'>'  shift 131
	'<'  shift 132
	'+'  shift 133
	'-'  shift 134
	'*'  shift 135
	'/'  shift 136
	'%'  shift 137
	POTENTIAL  shift 138
	'['  shift 139
	'.'  shift 140
	';'  shift 141
	.  error


state 90
	statement : read . ';'  (22)

	';'  shift 142
	.  error


state 91
	statement : increment . ';'  (23)

	';'  shift 143
	.  error


state 92
	statement : write . ';'  (24)

	';'  shift 144
	.  error


state 93
	statement : if_else .  (25)

	.  reduce 25


state 94
	statement : while .  (26)

	.  reduce 26


state 95
	statement : for .  (27)

	.  reduce 27


state 96
	statement : do_while .  (28)

	.  reduce 28


state 97
	statement : return . ';'  (29)

	';'  shift 145
	.  error


state 98
	expression : assignment .  (35)

	.  reduce 35


state 99
	expression : cast .  (50)

	.  reduce 50


state 100
	expression : array .  (51)

	.  reduce 51


state 101
	void_function : VOID ID '(' listOfParameters ')' '{' function_body '}' .  (12)

	.  reduce 12


state 102
	typed_function : built_in_type ID '(' listOfParameters ')' '{' function_body '}' .  (10)

	.  reduce 10


state 103
	function_invocation : ID '(' . listOfExpressions ')'  (8)
	function_invocation : ID '(' . ')'  (9)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	')'  shift 146
	.  error

	function_invocation  goto 87
	listOfExpressions  goto 147
	expression  goto 105
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 104
	listOfExpressions : listOfExpressions . ',' expression  (71)
	write : WRITE listOfExpressions .  (89)

	','  shift 148
	';'  reduce 89


state 105
	expression : expression . '+' expression  (30)
	expression : expression . '*' expression  (31)
	expression : expression . '/' expression  (32)
	expression : expression . '-' expression  (33)
	expression : expression . '%' expression  (34)
	expression : expression . POTENTIAL expression  (36)
	expression : expression . DOUBLEEQUALS expression  (37)
	expression : expression . '>' expression  (38)
	expression : expression . GEQ expression  (39)
	expression : expression . '<' expression  (40)
	expression : expression . LEQ expression  (41)
	expression : expression . DIFFERENT expression  (42)
	expression : expression . AND expression  (43)
	expression : expression . OR expression  (44)
	expression : expression . '.' expression  (49)
	listOfExpressions : expression .  (72)
	array : expression . '[' expression ']'  (78)
	assignment : expression . '=' expression  (87)

	LEQ  shift 118
	GEQ  shift 119
	DOUBLEEQUALS  shift 120
	DIFFERENT  shift 121
	AND  shift 122
	OR  shift 123
	'='  shift 130
	'>'  shift 131
	'<'  shift 132
	'+'  shift 133
	'-'  shift 134
	'*'  shift 135
	'/'  shift 136
	'%'  shift 137
	POTENTIAL  shift 138
	'['  shift 139
	'.'  shift 140
	')'  reduce 72
	','  reduce 72
	';'  reduce 72


state 106
	listOfExpressions : listOfExpressions . ',' expression  (71)
	read : READ listOfExpressions .  (88)

	','  shift 148
	';'  reduce 88


state 107
	if_else : IF '(' . expression ')' body ELSE body  (63)
	if_else : IF '(' . expression ')' body  (64)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 149
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 108
	while : WHILE '(' . expression ')' body  (67)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 150
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 109
	expression : expression . '+' expression  (30)
	expression : expression . '*' expression  (31)
	expression : expression . '/' expression  (32)
	expression : expression . '-' expression  (33)
	expression : expression . '%' expression  (34)
	expression : expression . POTENTIAL expression  (36)
	expression : expression . DOUBLEEQUALS expression  (37)
	expression : expression . '>' expression  (38)
	expression : expression . GEQ expression  (39)
	expression : expression . '<' expression  (40)
	expression : expression . LEQ expression  (41)
	expression : expression . DIFFERENT expression  (42)
	expression : expression . AND expression  (43)
	expression : expression . OR expression  (44)
	expression : expression . '.' expression  (49)
	array : expression . '[' expression ']'  (78)
	assignment : expression . '=' expression  (87)
	return : RETURN expression .  (91)

	LEQ  shift 118
	GEQ  shift 119
	DOUBLEEQUALS  shift 120
	DIFFERENT  shift 121
	AND  shift 122
	OR  shift 123
	'='  shift 130
	'>'  shift 131
	'<'  shift 132
	'+'  shift 133
	'-'  shift 134
	'*'  shift 135
	'/'  shift 136
	'%'  shift 137
	POTENTIAL  shift 138
	'['  shift 139
	'.'  shift 140
	';'  reduce 91


state 110
	for : FOR '(' . statement expression ';' increment ')' body  (69)
	increment : .  (56)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	WRITE  shift 77
	READ  shift 78
	IF  shift 79
	WHILE  shift 80
	RETURN  shift 81
	FOR  shift 82
	DO  shift 83
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	';'  reduce 56

	function_invocation  goto 87
	statement  goto 151
	expression  goto 89
	read  goto 90
	increment  goto 91
	write  goto 92
	if_else  goto 93
	while  goto 94
	for  goto 95
	do_while  goto 96
	return  goto 97
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 111
	body : '{' . listOfStatements '}'  (65)
	listOfStatements : .  (17)

	.  reduce 17

	listOfStatements  goto 152


state 112
	body : statement .  (66)

	.  reduce 66


state 113
	do_while : DO body . WHILE '(' expression ')'  (68)

	WHILE  shift 153
	.  error


state 114
	expression : expression . '+' expression  (30)
	expression : expression . '*' expression  (31)
	expression : expression . '/' expression  (32)
	expression : expression . '-' expression  (33)
	expression : expression . '%' expression  (34)
	expression : expression . POTENTIAL expression  (36)
	expression : expression . DOUBLEEQUALS expression  (37)
	expression : expression . '>' expression  (38)
	expression : expression . GEQ expression  (39)
	expression : expression . '<' expression  (40)
	expression : expression . LEQ expression  (41)
	expression : expression . DIFFERENT expression  (42)
	expression : expression . AND expression  (43)
	expression : expression . OR expression  (44)
	expression : '!' expression .  (46)
	expression : expression . '.' expression  (49)
	array : expression . '[' expression ']'  (78)
	assignment : expression . '=' expression  (87)

	LEQ  shift 118
	GEQ  shift 119
	DOUBLEEQUALS  shift 120
	DIFFERENT  shift 121
	'>'  shift 131
	'<'  shift 132
	'+'  shift 133
	'-'  shift 134
	'*'  shift 135
	'/'  shift 136
	'%'  shift 137
	POTENTIAL  shift 138
	'['  shift 139
	'.'  shift 140
	AND  reduce 46
	OR  reduce 46
	INC  reduce 46
	DEC  reduce 46
	DIVIDEEQUALS  reduce 46
	TIMESEQUALS  reduce 46
	MINUSEQUALS  reduce 46
	PLUSEQUALS  reduce 46
	'='  reduce 46
	']'  reduce 46
	')'  reduce 46
	','  reduce 46
	';'  reduce 46


state 115
	expression : expression . '+' expression  (30)
	expression : expression . '*' expression  (31)
	expression : expression . '/' expression  (32)
	expression : expression . '-' expression  (33)
	expression : expression . '%' expression  (34)
	expression : expression . POTENTIAL expression  (36)
	expression : expression . DOUBLEEQUALS expression  (37)
	expression : expression . '>' expression  (38)
	expression : expression . GEQ expression  (39)
	expression : expression . '<' expression  (40)
	expression : expression . LEQ expression  (41)
	expression : expression . DIFFERENT expression  (42)
	expression : expression . AND expression  (43)
	expression : expression . OR expression  (44)
	expression : '-' expression .  (45)
	expression : expression . '.' expression  (49)
	array : expression . '[' expression ']'  (78)
	assignment : expression . '=' expression  (87)

	'['  shift 139
	'.'  shift 140
	LEQ  reduce 45
	GEQ  reduce 45
	DOUBLEEQUALS  reduce 45
	DIFFERENT  reduce 45
	AND  reduce 45
	OR  reduce 45
	INC  reduce 45
	DEC  reduce 45
	DIVIDEEQUALS  reduce 45
	TIMESEQUALS  reduce 45
	MINUSEQUALS  reduce 45
	PLUSEQUALS  reduce 45
	'='  reduce 45
	'>'  reduce 45
	'<'  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	'%'  reduce 45
	POTENTIAL  reduce 45
	']'  reduce 45
	')'  reduce 45
	','  reduce 45
	';'  reduce 45


state 116
	cast : '(' built_in_type . ')' expression  (70)

	')'  shift 154
	.  error


state 117
	expression : expression . '+' expression  (30)
	expression : expression . '*' expression  (31)
	expression : expression . '/' expression  (32)
	expression : expression . '-' expression  (33)
	expression : expression . '%' expression  (34)
	expression : expression . POTENTIAL expression  (36)
	expression : expression . DOUBLEEQUALS expression  (37)
	expression : expression . '>' expression  (38)
	expression : expression . GEQ expression  (39)
	expression : expression . '<' expression  (40)
	expression : expression . LEQ expression  (41)
	expression : expression . DIFFERENT expression  (42)
	expression : expression . AND expression  (43)
	expression : expression . OR expression  (44)
	expression : '(' expression . ')'  (48)
	expression : expression . '.' expression  (49)
	array : expression . '[' expression ']'  (78)
	assignment : expression . '=' expression  (87)

	LEQ  shift 118
	GEQ  shift 119
	DOUBLEEQUALS  shift 120
	DIFFERENT  shift 121
	AND  shift 122
	OR  shift 123
	'='  shift 130
	'>'  shift 131
	'<'  shift 132
	'+'  shift 133
	'-'  shift 134
	'*'  shift 135
	'/'  shift 136
	'%'  shift 137
	POTENTIAL  shift 138
	'['  shift 139
	'.'  shift 140
	')'  shift 155
	.  error


state 118
	expression : expression LEQ . expression  (41)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 156
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 119
	expression : expression GEQ . expression  (39)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 157
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 120
	expression : expression DOUBLEEQUALS . expression  (37)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 158
	assignment  goto 98
	cast  goto 99
	array  goto 100


state 121
	expression : expression DIFFERENT . expression  (42)

	INT_CONSTANT  shift 73
	CHAR_CONSTANT  shift 74
	REAL_CONSTANT  shift 75
	ID  shift 76
	'!'  shift 84
	'-'  shift 85
	'('  shift 86
	.  error

	function_invocation  goto 87
	expression  goto 159
	assignment  goto 98
	cast  goto 99
	array  goto 100

